...
                            <constraint firstItem="yiu-jr-mTE" firstAttribute="leading" secondItem="nBg-XJ-BS4" secondAttribute="leading" id="fBw-n7-8u9"/>
                            <constraint firstItem="GkP-m1-eZx" firstAttribute="trailing" secondItem="nBg-XJ-BS4" secondAttribute="trailing" id="pMD-DQ-jqo"/>
                            <constraint firstItem="GkP-m1-eZx" firstAttribute="top" secondItem="nBg-XJ-BS4" secondAttribute="top" constant="50" id="y8F-2p-kJ5"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="nBg-XJ-BS4"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="設定" id="eaW-Du-ERE"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="yce-Nb-Vd8" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="528.79999999999995" y="858.62068965517244"/>
        </scene>
        <!--Item 3-->
...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分類" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yM4-X7-YBb">
                                                    <rect key="frame" x="0.0" y="0.0" width="125" height="59.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="預算" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vY9-Ok-522">
                                                    <rect key="frame" x="125" y="0.0" width="125" height="59.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iac-Dd-v6B">
...
